--- a/includes/header.html
+++ b/includes/header.html
@@ -5,8 +5,10 @@
             <!-- Left Side: Title -->
             <div class="col-md-6">
                 <div class="header-title">
-                    <h1 class="mb-0">Bhagwan Shailja Narayan</h1>
-                    <p class="subtitle mb-0">6th Incarnation of Lord Vishnu</p>
+                    <a href="#" data-page="home" class="text-decoration-none text-reset" aria-label="Home">
+                        <h1 class="mb-0">Bhagwan Shailja Narayan</h1>
+                        <p class="subtitle mb-0">6th Incarnation of Lord Vishnu</p>
+                    </a>
                 </div>
             </div>
             
@@ -27,6 +29,12 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#" data-page="opinion">People's Opinion</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#" data-page="activities">Activities</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#" data-page="books">Books</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#" data-page="news">News</a>
