--- a/includes/header.html
+++ b/includes/header.html
@@ -1,7 +1,23 @@
+<div class="announcement-bar">
+    <div class="container-fluid">
+        <div class="ticker-wrap">
+            <div class="ticker">
+                <div class="ticker-item">
+                    <a href="#" data-page="news" class="text-white text-decoration-none">
+                        📢 VILAY GYAN DHARMARTH SANSTHA - PROGRAMS FOR THE MONTH OF DECEMBER-2025
+                    </a>
+                </div>
+                <!-- <div class="ticker-item">🗓️ Upcoming Activities: Charity drive this weekend. Join us!</div>
+                <div class="ticker-item">✨ New Book Release: "The Divine Path" is now available.</div> -->
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Header Section -->
 <header class="header-section">
     <div class="container-fluid">
-        <div class="row align-items-center py-3">
+        <div class="row align-items-center py-3 gy-3">
             <!-- Left Side: Title -->
             <div class="col-md-6">
                 <div class="header-title">
@@ -11,12 +27,14 @@
                     </a>
                 </div>
             </div>
-            
+
             <!-- Right Side: Navigation Menu -->
             <div class="col-md-6">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid ps-0 pe-0">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -25,22 +43,30 @@
                                     <a class="nav-link" href="#" data-page="home">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-page="vilay">The Aim Of Life - Vilay</a>
+                                    <a class="nav-link" href="#" data-page="vilay">Vilay</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-page="opinion">People's Opinion</a>
+                                    <a class="nav-link" href="#" data-page="opinion">Opinion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-page="activities">Activities</a>
+                                    <a class="nav-link position-relative" href="#" data-page="activities">
+                                        Activities
+                                        <span class="badge bg-warning text-dark rounded-pill small ms-1"
+                                            style="font-size: 0.7em; vertical-align: top;">Featured</span>
+                                    </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#" data-page="books">Books</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-page="news">News</a>
+                                    <a class="nav-link position-relative" href="#" data-page="news">
+                                        News
+                                        <span class="badge bg-danger rounded-pill small ms-1"
+                                            style="font-size: 0.7em; vertical-align: top;">New</span>
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-page="contact">Contact Us</a>
+                                    <a class="nav-link" href="#" data-page="contact">Contact</a>
                                 </li>
                             </ul>
                         </div>
