--- a/includes/header.html
+++ b/includes/header.html
@@ -4,7 +4,7 @@
             <div class="ticker">
                 <div class="ticker-item">
                     <a href="#" data-page="news" class="text-white text-decoration-none">
-                        📢 VILAY GYAN DHARMARTH SANSTHA - PROGRAMS FOR THE MONTH OF DECEMBER-2025
+                        📢 PROGRAMS FOR THE MONTH OF DECEMBER-2025
                     </a>
                 </div>
                 <!-- <div class="ticker-item">🗓️ Upcoming Activities: Charity drive this weekend. Join us!</div>
@@ -49,10 +49,9 @@
                                     <a class="nav-link" href="#" data-page="opinion">Opinion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link position-relative" href="#" data-page="activities">
-                                        Activities
-                                        <span class="badge bg-warning text-dark rounded-pill small ms-1"
-                                            style="font-size: 0.7em; vertical-align: top;">Featured</span>
+                                    <a class="nav-link position-relative" href="#" data-page="events">
+                                        Events
+                                      
                                     </a>
                                 </li>
                                 <li class="nav-item">
